# eo-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
eotools/: train.py
notebooks/: config.smp.yaml  config.transformer.yaml  examples.ipynb
